' Copyright (C) 2019 - present Juergen Zimmermann, Hochschule Karlsruhe
'
' This program is free software: you can redistribute it and/or modify
' it under the terms of the GNU General Public License as published by
' the Free Software Foundation, either version 3 of the License, or
' (at your option) any later version.

' Preview durch <Alt>d

@startuml ER Diagramm

' hide the spot
hide circle

' evtl. Probleme mit Kraehenfuessen vermeiden
skinparam linetype ortho

entity "Carrier" {
  * id: integer <<generated>>
  --
  * version: integer
  * name: text
  * nation: text
  * carrier_type: carrier_type
  * erzeugt: timestamp
  * aktualisiert: timestamp
}

entity "CommandCenter" {
  * id: integer <<generated>>
  --
  * code_name: text
  * security_level: integer
  * **carrier_id**: integer <<FK>>
}

entity "Aircraft" {
  * id: integer <<generated>>
  --
  * model: text
  * manufacturer: text
  * **carrier_id**: integer <<FK>>
}

Carrier ||..|| CommandCenter
Carrier ||..o{ Aircraft

footer (c) Juergen Zimmermann

@enduml
